--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,16 +28,16 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/HealthTrack.jar
+dist.jar=${dist.dir}/Health_Track.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/HealthTrack
+dist.jlink.output=${dist.jlink.dir}/Health_Track
 excludes=
-file.reference.mysql-connector-java-8.0.28.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.28.jar
+file.reference.Program_Files__x86_-MySQL=C:\\Program Files (x86)\\MySQL
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.Program_Files__x86_-MySQL}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,8 +46,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=18
-javac.target=18
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -72,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=HealthTrack
-main.class=Dashboard
+jlink.launcher.name=Health_Track
+main.class=view.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
