--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/HealthTrack.jar
+dist.jar=${dist.dir}/Health_Track.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/HealthTrack
+dist.jlink.output=${dist.jlink.dir}/Health_Track
 excludes=
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.28.jar
 includes=**
@@ -72,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=HealthTrack
-main.class=Dashboard
+jlink.launcher.name=Health_Track
+main.class=view.signup
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
